# bookbot

./: .pre-commit-config.yaml  AGENTS.MD  CONTRIBUTING.md  README.md  main.py  progress.md  pyproject.toml  stats.py
.github/workflows/: agents.yml  ci.yml
bookbot/: AGENTS.md  cli.py  corpus.py  formats.py  rendering.py
bookbot/metrics/: AGENTS.md  categories.py  counts.py  readability.py  vocabulary.py
bookbot/utils/: AGENTS.md  tokenization.py
scripts/: AGENTS.md  scaffold_agents.py
tests/: AGENTS.md  test_cli.py  test_cli_errors.py  test_golden.py  test_rendering.py  test_sort_flags.py  test_stats.py  test_tokenization.py
tests/golden/: chars_moby_top3.json  compare_words_top3.json  ngrams_moby_bi_top3.json  words_moby_stop_en_top3.json
